@@ -10,6 +10,13 @@ Limitations:
 
 
 Revision History:
+ 4-Nov-2002
+Acknowledgements:
+    Thanks to Geert Bevin for fixing a problem with comparing cookies
+
+Problems Fixed:
+    1. Adding both a "global" cookie and a server-based cookie with the same name causes a NullPointerException
+
  3-Nov-2002 1.5
 Acknowledgements:
     Thanks to Ken Corbin for adding tests for disabled and read-only parameters.
